Prevent line break in the userbox on too long names

--- a/src/html/css/stu.css
+++ b/src/html/css/stu.css
@@ -1050,6 +1050,13 @@ div.userListSortItem {
   text-align: center;
 }
 
+div.userBoxDetailName {
+  width: 220px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 @media (min-width: 1025px) and (max-width: 1280px) {
   div.container {
     width: 1000px;
